<resources>
    <string name="app_name">Android 12 Extensions</string>

    <!-- General -->
    <string name="about">About</string>
    <string name="action_force_reload">Force reload</string>
    <string name="applying_changes">Applying changes</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>

    <!-- Settings -->
    <string name="settings_title">Extensions</string>
    <string name="enabled">Enable features</string>
    <string name="enabled_desc">Enable or disable everything</string>
    <string name="settings">Settings</string>
    <string name="settings_system">System</string>
    <string name="settings_system_desc">System features and changes</string>
    <string name="settings_android_settings">Settings</string>
    <string name="settings_android_settings_desc">Changes to the Settings app</string>
    <string name="settings_launcher">Launcher</string>
    <string name="settings_launcher_desc">Pixel Launcher changes</string>
    <string name="settings_tweaks">Tweaks</string>
    <string name="settings_tweaks_desc">Per-app interface changes</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_appearance_desc">Unofficial theme and color changes</string>
    <string name="action_report_settings">Send settings</string>

    <!-- System -->
    <string name="system_monet">Monet</string>
    <string name="system_monet_desc">Colorful wallpaper-based themes</string>
    <string name="system_lockscreen">Lock screen design</string>
    <string name="system_lockscreen_desc">Clock layout and screen on/off animations</string>
    <string name="system_toast">Toast design</string>
    <string name="system_toast_desc">App icon and solid background</string>
    <string name="system_rounded_screenshots">Rounded screenshots</string>
    <string name="system_rounded_screenshots_desc">Include rounded screen corners in screenshots</string>
    <string name="system_privacy_indicators">Privacy indicators</string>
    <string name="system_privacy_indicators_desc">Camera, microphone, and location</string>
    <string name="system_charging_ripple">Charging ripple animation</string>
    <string name="system_charging_ripple_desc">Ripple animation when starting to charge</string>
    <string name="system_internet_ui">Unified internet settings</string>
    <string name="system_internet_ui_desc">Manage Wi-Fi and cellular in one place</string>
    <string name="system_combined_signal">Unified signal icons</string>
    <string name="system_combined_signal_desc">Only show current Wi-Fi or cellular signal in status bar</string>
    <string name="system_info">You can also disable features that are enabled by default.</string>

    <!-- Android Settings -->
    <string name="android_settings_shared_axis">Shared axis transition</string>
    <string name="android_settings_shared_axis_desc">New animation when opening and closing pages</string>
    <string name="android_settings_battery_slots">Battery usage periods</string>
    <string name="android_settings_battery_slots_desc">Historical battery usage breakdowns for 2-hour periods</string>
    <string name="android_settings_info">The Xposed module must be enabled for the Settings app in order for these settings to work.</string>

    <!-- Launcher -->
    <string name="launcher_themed_icons">Themed icons</string>
    <string name="launcher_themed_icons_desc">Use Material You colors for supported Google app icons (home screen only)</string>
    <string name="launcher_device_search">On-device search</string>
    <string name="launcher_device_search_desc">Device-wide search with Material You UI in the app drawer</string>
    <string name="launcher_animations">New app animations</string>
    <string name="launcher_animations_desc">Tweaks to app open and close animations</string>
    <string name="launcher_keyguard_anim">New unlock animation</string>
    <string name="launcher_keyguard_anim_desc">Depth animation when unlocking device on the launcher</string>
    <string name="launcher_live_space">New Live Space</string>
    <string name="launcher_live_space_desc">New Live Space UI on home screen</string>
    <string name="launcher_local_color_popups">Multi-color menus</string>
    <string name="launcher_local_color_popups_desc">Popup menu items follow the wallpaper color underneath them</string>
    <string name="launcher_info">The Xposed module must be enabled for Pixel Launcher in order for these settings to work.</string>

    <!-- Tweaks -->
    <string name="tweak_ripple_style">Ripple animation</string>
    <string name="tweak_ripple_style_default">Default</string>
    <string name="tweak_ripple_style_default_desc">Default Android 12 ripple</string>
    <string name="tweak_ripple_style_no_sparkles">No sparkles</string>
    <string name="tweak_ripple_style_no_sparkles_desc">Default ripple with sparkles removed</string>
    <string name="tweak_ripple_style_fluent">Fluent</string>
    <string name="tweak_ripple_style_fluent_desc">Custom ripple inspired by Fluent Design</string>
    <string name="tweak_ripple_style_legacy">Legacy</string>
    <string name="tweak_ripple_style_legacy_desc">Old Material ripple from Android 11</string>
    <string name="tweak_haptic_touch">Vibrate on touch</string>
    <string name="tweak_haptic_touch_desc">Subtle vibration when you touch an interactive element in most apps</string>
    <string name="tweaks_info">Tweaks are per-app interface changes. The Xposed module needs to be enabled for every app you want to tweak.</string>

    <!-- Appearance -->
    <string name="appearance_custom_monet">Custom theme engine</string>
    <string name="appearance_custom_monet_desc">Generate wallpaper-based themes with a custom engine</string>
    <string name="appearance_custom_monet_desc_forced">Generate wallpaper-based themes with a custom engine. Required on AOSP because there is no other engine.</string>
    <string name="appearance_custom_monet_accurate_shades">Accurate shades</string>
    <string name="appearance_custom_monet_accurate_shades_desc">More accurate color shades at the cost of duller colors</string>
    <string name="appearance_custom_monet_chroma_multiplier">Colorfulness</string>
    <string name="appearance_custom_monet_zcam_advanced">Advanced color model settings</string>
    <string name="category_colors">Colors</string>
    <string name="appearance_monet_custom_color">Use custom color</string>
    <string name="appearance_monet_custom_color_desc">Select theme color instead of extracting colors from wallpaper</string>
    <string name="appearance_monet_custom_color_value">Theme color</string>
    <string name="appearance_monet_custom_color3">Custom complement color</string>
    <string name="appearance_monet_custom_color3_desc">Select complementary color instead of deriving from main theme color</string>
    <string name="appearance_monet_custom_color3_value">Complementary color</string>
    <string name="appearance_monet_palette">Show color palette</string>
    <string name="appearance_monet_palette_desc">All 65 Material You colors</string>
    <string name="appearance_monet_quantizer">Show wallpaper colors</string>
    <string name="appearance_monet_quantizer_desc">Up to 14 colors extracted from wallpaper</string>
    <string name="category_aosp">AOSP</string>
    <string name="appearance_aosp_circle_icons">Circular icons</string>
    <string name="appearance_aosp_circle_icons_desc">Circle shape for app icons</string>

    <!-- Appearance advanced CAM settings -->
    <string name="appearance_advanced">Advanced color</string>
    <string name="appearance_advanced_linear_lightness">Custom brightness scale</string>
    <string name="appearance_advanced_linear_lightness_desc">Use the new color model’s brightness scale instead of Google’s. This makes the “Theme brightness” option more effective.</string>
    <string name="appearance_advanced_white_luminance">Theme brightness</string>
    <string name="appearance_advanced_white_luminance_desc">If custom brightness is disabled, this will only affect colorfulness: increasing brightness will make lighter colors stronger and darker colors more subtle, and vice versa.</string>
    <string name="appearance_advanced_telemetry">Analytics</string>
    <string name="appearance_advanced_send_settings_report">Send settings to developer</string>
    <string name="appearance_advanced_send_settings_report_desc">Anonymously send your Android 12 Extensions settings to the developer and help improve it for everyone!</string>

    <!-- Palette -->
    <string name="monet_palette">Color palette</string>
    <string name="monet_palette_accent1">A-1</string>
    <string name="monet_palette_accent2">A-2</string>
    <string name="monet_palette_accent3">A-3</string>
    <string name="monet_palette_neutral1">N-1</string>
    <string name="monet_palette_neutral2">N-2</string>

    <!-- Quantizer -->
    <string name="monet_quantizer">Wallpaper colors</string>
    <string name="monet_quantizer_color_copied">Copied to clipboard: %1$s</string>

    <!-- Errors -->
    <string name="error_xposed_module_missing">Xposed module is not enabled</string>
    <string name="error_xposed_module_missing_desc">In order for this app to work, you need to enable the included Xposed module for the “System UI” app in LSPosed Manager and restart your device.\n\nNote: “System UI” is NOT the same as “System Framework”. Don’t see it? Uncheck 3-dot menu > Hide > System apps.</string>
    <string name="error_xposed_manager_not_installed">LSPosed Manager is not installed</string>
    <string name="error_xposed_manager_not_installed_desc">To enable all features:\n\t1. Install the “Riru” module from Magisk Manager\n\t2. Install the “Riru - LSPosed” module from Magisk Manager\n\t3. Restart your device\n\t4. Open this app for more instructions</string>
    <string name="error_missing_root">No root access</string>
    <string name="error_missing_root_desc">Root access is necessary in order for this app to manage overlays and work properly.</string>

    <!-- About -->
    <string name="donate">Donate</string>
    <string name="contact">Contact</string>
    <string name="source_code">Source code</string>
    <string name="about_app_description"><![CDATA[
        Enable and customize hidden features on preview versions of Android 12.
        <br />
        <br />
        Made with ❤️ by <a href="https://kdrag0n.dev/?utm_medium=app&amp;utm_source=android12ext">kdrag0n</a>. Please consider <a href="https://kdrag0n.dev/donate?utm_medium=app&amp;utm_source=android12ext">donating to support development</a> if you found this helpful!
    ]]></string>
    <string name="about_uri_donate" translatable="false">https://kdrag0n.dev/donate?utm_medium=app&amp;utm_source=android12ext</string>
    <string name="about_uri_source_code" translatable="false">https://github.com/kdrag0n/android12-extensions</string>

    <!-- Telemetry prompt -->
    <string name="telemetry_prompt_send_settings_report">Send settings to developer?</string>
    <string name="telemetry_prompt_send_settings_report_desc">This is fully anonymous and only includes Android 12 Extensions settings. Allowing it will help improve the experience for everyone!</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>

    <!-- Xposed -->
    <string-array name="xposed_scopes" translatable="false">
        <item>com.android.systemui</item>
        <item>com.android.settings</item>
        <item>com.android.launcher3</item>
        <item>com.google.android.apps.nexuslauncher</item>
        <item>com.google.android.apps.wallpaper</item>
    </string-array>
</resources>
